<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"
            app:showAsAction="always" />
        <item android:id="@+id/map"
            android:title="@string/map"
            android:icon="@drawable/ic_baseline_map_24"
            app:showAsAction="always" />
        <item android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/ic_baseline_note_add_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/language"
            android:title="@string/language"
            android:icon="@drawable/ic_baseline_language_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/action_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_login_24"
            app:showAsAction="ifRoom" />
    </group>
</menu>